--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,18 @@
-FROM python:3.8.2-alpine
+FROM python:3.8.2
+LABEL author="andrei.iosif@tum.de"
 
-RUN apt-get update \
-    && apt-get install -yq --no-install-recommends \
-    python3 \
-    python3-pip
-RUN pip3 install --upgrade pip==20.2.4 \
-    && pip3 install setuptools
-
-# for flask web server
-EXPOSE 8081
-
-# set working directory
-ADD . /app
+COPY . /app
 WORKDIR /app
 
-# install required libraries
-RUN pip3 install -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install setuptools
+RUN pip install -r requirements.txt
+RUN python -m spacy download de_core_news_lg
+ENV PYTHONPATH="$PYTHONPATH:/"
 
-# This is the runtime command for the container
-CMD python3 app.py
+# Unit tests
+# RUN pip install pytest && pytest
+
+EXPOSE 5000
+
+ENTRYPOINT python app.py
