moved file download into Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,9 +9,11 @@ RUN pip install setuptools
 RUN pip install -r requirements.txt
 ENV PYTHONPATH="$PYTHONPATH:/"
 
+# Download the big files
 RUN python3 -m spacy download de_core_news_lg
+RUN wget ./models -P https://cloud.devmount.de/d2bc5672c523b086/german.model
 
-# Unit tests
+# Unit tests?
 # RUN pip install pytest && pytest
 
 EXPOSE 8081
